# mule-llm-explainability-enforcement

./: .gitignore  .project.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md
config/: example-minimal.yaml  example-production.yaml  example-rollout.yaml
definition/: exchange.json  gcl.yaml  home.md
playground/: docker-compose.yaml
playground/config/: api.yaml
playground/config/custom-policies/: note.txt
src/: audit.rs  config.rs  extractor.rs  inbound.rs  lib.rs  models.rs  outbound.rs  prompt_generator.rs  validator.rs
tests/fixtures/: request_chat_completions.json  request_responses_api.json  response_anthropic_compliant.json  response_chat_compliant.json  response_chat_no_metadata.json  response_openai_error.json  response_responses_api_compliant.json  response_streaming_chunk.json
