[package]
name = "llm_explainability_enforcement"
version = "1.0.1"
edition = "2021"
description = "Enforces AI explainability metadata on LLM API responses"

[package.metadata.anypoint]
group_id = "37289ac4-fbe0-43a3-a3e3-7846cb0153e2"
definition_asset_id = "llm-explainability-enforcement"
implementation_asset_id = "llm-explainability-enforcement-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pdk = { version = "1.9.0", features = ["enable_stop_iteration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
regex = "1"
sha2 = "0.10"

[dev-dependencies]
pdk-unit = { version = "1.9.0", features = ["enable_stop_iteration"] }

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"